[package]
name = "test-candle-onnx"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-onnx = { version = "0.9.1" }
image = "0.25.6"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
rubato = "0.16.2"

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.9.1", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = [] }
